src/app/globals.css
:root {
  --max-width: 1100px;
  --border-radius: 12px;
  --font-sans: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
    "Segoe UI Symbol";
  --font-serif: "Merriweather", Georgia, "Times New Roman", serif;
  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;

  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  }
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

html,
body {
  max-width: 100vw;
  overflow-x: hidden;
  font-family: var(--font-sans); /* Default to sans-serif for body text */
}

body {
  color: black;
  background-color: #f6f6f6;
}

/* Scrollbar styles */
::-webkit-scrollbar {
  width: 8px;
}

::-webkit-scrollbar-track {
  background: #f1f1f1;
}

::-webkit-scrollbar-thumb {
  background: #888;
  border-radius: 10px;
}

::-webkit-scrollbar-thumb:hover {
  background: #555;
}

a {
  color: inherit;
  text-decoration: none;
}

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
}

/* Typography variant styles */
.h1,
.h2,
.h3,
.h4,
.h5,
.h6 {
  font-family: var(--font-serif); /* Using serif fonts for headings */
}

.h1 {
  font-size: 6rem;
  font-weight: 300;
  line-height: 1.167;
  letter-spacing: -0.01562em;
}

.h2 {
  font-size: 3.75rem;
  font-weight: 300;
  line-height: 1.2;
  letter-spacing: -0.00833em;
}

.h3 {
  font-size: 3rem;
  font-weight: 400;
  line-height: 1.167;
  letter-spacing: 0em;
}

.h4 {
  font-size: 2.125rem;
  font-weight: 400;
  line-height: 1.235;
  letter-spacing: 0.00735em;
}

.h5 {
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.334;
  letter-spacing: 0em;
}

.h6 {
  font-size: 1.25rem;
  font-weight: 500;
  line-height: 1.6;
  letter-spacing: 0.0075em;
}

.subtitle1 {
  font-size: 1rem;
  line-height: 1.75;
  letter-spacing: 0.00938em;
}

.blur_effect_card {
  backdrop-filter: blur(10px);
  background-color: rgba(255, 255, 255, 0.2);
  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
  border-radius: 16px;
}

.light-heading {
  font-weight: bold;
  color: black;
}

.dark-heading {
  font-weight: bold;
  color: white;
}

.light-text {
  color: black;
}

.dark-text {
  color: white;
}

